[package]
name = "aoc2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "prob1",
    "prob2",
    "prob3",
    "prob4",
    "prob5",
    "prob6",
    "prob7",
    "prob8",
    "prob9",
    "prob10",
    "prob11",
    "prob12",
    "prob13", 
    "prob14", "prob15", "prob16", "prob17", "prob18",
]
